--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Alex's Cocktails</h1>
+<h1>Milanchester Cocktails</h1>
 <p>The Best Cocktails in Milan</p>
 
 <% @cocktails.each do |cocktail| %>
